# ACCL_Q

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  README.md  api_server.py  demo_accl_q.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
driver/python/: pyproject.toml
driver/python/accl_quantum/: __init__.py  constants.py  deployment.py  driver.py  emulator.py  feedback.py  hardware_accel.py  integrations.py  profiler.py  stats.py
driver/python/accl_quantum/docs/: api_reference.md  integration_guide.md  performance_tuning.md  troubleshooting.md
driver/xrt/include/accl/quantum/: quantum_constants.hpp
kernels/cclo/hls/quantum/: aurora_direct.cpp  clock_sync_unit.cpp  collective_ops.cpp  collective_ops_tb.cpp  latency_testbench.cpp  quantum_hls_constants.h
proposals/: PYNQ_QUANTUM_ISSUE.md  PYNQ_QUANTUM_RFC.md
results/: ibm_cloud_test_results.json
test/quantum/: conftest.py  test_api_server.py  test_collective_ops.py  test_hardware_validation.py  test_integration.py  test_integrations_coverage.py  test_latency_validation.py  test_module_coverage.py  test_ull_api.py  test_ull_latency_validation.py  test_ull_optimization.py
