[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accl-quantum"
version = "0.2.0"
description = "ACCL-Q: Quantum-Optimized Collective Communication Library"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "ACCL-Q Team"}
]
keywords = ["quantum", "collective-communication", "fpga", "rfsoc", "low-latency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Hardware",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["accl_quantum*"]

[tool.pytest.ini_options]
testpaths = ["../../test/quantum"]
asyncio_mode = "auto"
